# Helix

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
agentic_system/: cli.py  runtime.py
agentic_system/core/: agent.py  environment.py  loop.py  state.py
agentic_system/kernel/: __init__.py  executors.py  history_utils.py  model_router.py  orchestrator.py  promotion.py  prompts.py  searxng_manager.py  skills.py  storage.py
agentic_system/prompts/: agent_step_prompt.json  agent_system_prompt.json
agentic_system/runtime/: host.py
docs/: introduction.md  quickstart.md  skills.md  storage.md
docs/migrations/: 2026-02-image-config-rename.md
helix/: __main__.py
helix/builtin_skills/: __init__.py
helix/core/: __init__.py  action.py  agent.py  docker_sandbox.py  environment.py  local_model_service.py  sandbox.py  state.py
helix/prompts/: agent_system_prompt.json
helix/providers/: __init__.py  openai_compat.py
helix/runtime/: approval.py  cli.py  debug.py  display.py  host.py  (+2 more)
tests/: test_approval_outside_writes.py  test_context.py  test_core.py  test_delegate.py  test_docker_sandbox.py  test_file_based_planning_scripts.py  test_generate_audio_script.py  test_generate_image_script.py  test_generate_video_script.py  test_host.py  test_host_sandbox.py  test_local_model_service.py  test_prepare_audio_model_script.py  test_prepare_model_script.py  test_prepare_video_model_script.py  test_runtime.py  test_runtime_kernel.py  test_search_online_context_skill.py  test_skill_creation_script.py  test_skills.py  test_subagent_simulation.py
(+40 files in other folders)
