[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helix"
version = "0.2.0"
description = "RL-inspired agent framework with universal loop, sandbox execution, and skill system."
requires-python = ">=3.10"
dependencies = [
  "prompt_toolkit>=3.0.0",
]

[project.scripts]
helix = "helix.runtime.cli:main"

[tool.setuptools.packages.find]
include = ["helix*"]

[tool.setuptools.package-data]
helix = [
  "prompts/*.json",
  "builtin_skills/**/SKILL.md",
  "builtin_skills/**/*.py",
  "builtin_skills/**/*.sh",
]
